--- a/common/backmatr.tex
+++ b/common/backmatr.tex
@@ -90,7 +90,7 @@
 %\begin{footnotesize}
 \addcontentsline{toc}{section}{References}
 %\bibliography{../common/bib/language,../common/bib/algebra,../common/bib/found,../common/bib/order,../common/bib/analysis,../common/bib/mathmisc,../common/bib/mathhist,../common/bib/wavelets,../common/bib/english,../common/bib/approx,../common/bib/digcom}
-\bibliography{../common/bib/language,../common/bib/zhtstory,../common/bib/algebra,../common/bib/biology,../common/bib/found,../common/bib/order,../common/bib/analysis,../common/bib/mathmisc,../common/bib/mathhist,../common/bib/wavelets,../common/bib/approx,../common/bib/digcom,../common/bib/unicode,../common/bib/english}
+\bibliography{../common/bib/language,../common/bib/zhtstory,../common/bib/algebra,../common/bib/biology,../common/bib/found,../common/bib/order,../common/bib/analysis,../common/bib/mathmisc,../common/bib/probstat,../common/bib/mathhist,../common/bib/wavelets,../common/bib/approx,../common/bib/digcom,../common/bib/unicode,../common/bib/english}
 
   %agsm.bst
   %apsr.bst
