--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -6346,6 +6346,15 @@
   pages        = {849--868},
   }
 
+@book{vanderpol1959,
+  author       = {Balth. Van Der Pol and H. Bremmer},
+  year         = {1959},
+  title        = {Operational Calculus based on the Two-Sided Laplace Integral},
+  url          = {https://archive.org/details/in.ernet.dli.2015.141269/},
+  publisher    = {Cambridge at the University Press},
+  edition      = {2nd, Reprinted}
+  }
+
 @book{vel1993,
   author       = {M.L.J. van de Vel},
   title        = {Theory of Convex Structures},
