--- a/common/bib/mathhist.bib
+++ b/common/bib/mathhist.bib
@@ -643,7 +643,18 @@
   url          = {http://books.google.com/books?id=8HxBAAAAcAAJ},
   language     = {French},
   }
-  
+
+@book{moritz1914,
+  title        = {Memorabilia Mathematica; Or, The Philomath's Quotation-book},
+  author       = {Robert /'Edouard Moritz},
+  publisher    = {Macmillan},
+  year         = {1914},
+  pages        = {410},
+  urlx         = {https://archive.org/details/memorabiliamathe00moriiala},
+  url          = {https://archive.org/details/memorabiliamath02morigoog},
+  urlx         = {https://books.google.com/books?id=DuYGAAAAYAAJ},
+  }
+
 @article{newton1714,
   author      = {Isaac Newton},
   title       = {An Account of the Book entituled 
