--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -1064,6 +1064,44 @@
   urla         = {http://www.amazon.com/dp/0486142043},
   }
 
+@book{laplace1812,
+  author       = {Pierre-Simon Laplace},
+  year         = {1812},
+  title        = {Theorie Analytique des Probabilités},
+  language     = {French},
+  }
+
+@book{laplace1814,
+  author       = {Pierre-Simon Laplace},
+  year         = {1814},
+  title        = {Theorie Analytique des Probabilit/'es},
+  edition      = {2},
+  address      = {Paris},
+  url          = {https://archive.org/details/bub_gb_6MRLAAAAMAAJ/},
+  urlx         = {https://archive.org/details/thorieanalytiqu01laplgoog/},
+  language     = {French},
+  }
+
+@book{laplace1820,
+  author       = {Pierre-Simon Laplace},
+  year         = {1820},
+  title        = {Theorie Analytique des Probabilités},
+  urll         = {https://archive.org/stream/theorieanaldepro00laplrich},
+  url          = {https://archive.org/details/theorieanaldepro00laplrich},
+  language     = {French},
+  }
+
+@book{laplace1902,
+  author       = {Pierre-Simon Laplace},
+  translator   = {Frederick Wilson Truscott and Frederick Lincoln Emory},
+  year         = {1902},
+  title        = {A Philosophical Essay on Probabilities},
+  pages        = {196},
+  publisher    = {Wiley},
+  language     = {English},
+  url          = {https://books.google.com/books?id=DfI7AQAAMAAJ},
+  }
+
 @article{leclere2012,
   title        = {On the use of the Hs estimator for the experimental assessment of transmissibility matrices},
   author       = {Q. Leclere and Bert Roozen and Celine Sandier},
