--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -433,6 +433,7 @@
 % Cite with web link to actual page being referenced
 %---------------------------------------
 \newcommand{\citercu}  [3]{\citebullet\;\cite{#1} \href{#3}{\lcomdelim#2\rcomdelim}\index[xref]{{\cite{#1}}}} 
+\newcommand{\citerpuc} [4]{\citebullet\;\cite{#1} \href{#3}{page~#2}{\lcomdelim#4\rcomdelim}\index[xref]{{\cite{#1}}}} 
 \newcommand{\citerpu}  [3]{\citebullet\;\cite{#1} \href{#3}{page~#2}\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citerpcu} [4]{\citebullet\;\cite{#1} \href{#4}{page~#2} \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}}
 \newcommand{\citerppu} [4]{\citebullet\;\cite{#1} \href{#4}{pages~#2--#3}\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
