opLT radius of convergence using closed interval notation

--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -55,10 +55,11 @@ Let $\spLLRBu$ be the space of all
 \section{Shift relations}
 %=======================================
 %--------------------------------------
-\begin{theorem}[Shift relations]
+\begin{theorem}
 \footnote{
   \citerpgc{bracewell1978}{234}{007007013X}{Table 11.1 Theorems for the Laplace Transform}
   }
+\label{thm:opLT}
 \label{thm:opLT_shift}
 \label{thm:opLT_dilation}
 %--------------------------------------
@@ -67,15 +68,26 @@ Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
 and $\fF(s)\eqd \brs{\opLT\ff(x)}$. 
 Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
 and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
-\thmbox{\begin{array}{>{\ds}lc>{\ds}lDr@{\hspace{2pt}}l@{\hspace{2pt}}lCD}
-    \mc{3}{N}{Transform}                                                                & \mc{4}{|N}{Radius of Convergence}                                     & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
+%\thmbox{\begin{array}{>{\ds}lc>{\ds}lDr@{\hspace{2pt}}l@{\hspace{2pt}}lCD}
+%    \mc{3}{N}{Transform}                                                                & \mc{4}{|N}{Radius of Convergence}                                     & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
+%  \\\hline
+%    \opLT\brs{\fg(x-\alpha)}        &=& e^{-\alpha s} \;\fG(s)                          & for & A              &\leq\Real(s)                    & \leq B               & \forall x,\alpha\in\C & (translation)
+%  \\\opLT\brs{e^{-\alpha x} \fg(x)} &=& \fG(s+\alpha)                                   & for & A-\Real(\alpha)&\leq\Real(s)                    & \leq B-\Real(\alpha) & \forall x,\alpha\in\C & (modulation)
+%  \\\opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s)                                 & for & \max(A,C)      &\leq\Real(s)                    & \leq \min(B,D)       & \forall x,\alpha\in\C & (\prope{additive})
+%  \\\opLT\brs{\fg(\alpha x)}        &=& \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}} & for & A              &\leq\Real\brp{\frac{s}{\alpha}} & \leq B               & \forall x,\alpha\in\C & (dilation)  
+%  \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)                                    & for & A              &\leq\Real(s)                    & \leq B               & \forall x,\alpha\in\C & (\prope{homogeneous})
+%\end{array}}
+%
+\thmbox{\begin{array}{>{\ds}l        c>{\ds}l                                             D     l              @{\hspace{2pt}}l                                             C                       D}
+    \mc{3}{N}{Transform}                                                                & \mc{3}{|N}{Radius of Convergence}                                               & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
   \\\hline
-    \opLT\brs{\fg(x-\alpha)}        &=& e^{-\alpha s} \;\fG(s)                          & for & A              &\leq\Real(s)                    & \leq B               & \forall x,\alpha\in\C & (translation)
-  \\\opLT\brs{e^{-\alpha x} \fg(x)} &=& \fG(s+\alpha)                                   & for & A-\Real(\alpha)&\leq\Real(s)                    & \leq B-\Real(\alpha) & \forall x,\alpha\in\C & (modulation)
-  \\\opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s)                                 & for & \max(A,C)      &\leq\Real(s)                    & \leq \min(B,D)       & \forall x,\alpha\in\C & (\prope{additive})
-  \\\opLT\brs{\fg(\alpha x)}        &=& \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}} & for & A              &\leq\Real\brp{\frac{s}{\alpha}} & \leq B               & \forall x,\alpha\in\C & (dilation)  
-  \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)                                    & for & A              &\leq\Real(s)                    & \leq B               & \forall x,\alpha\in\C & (\prope{homogeneous})
+    \opLT\brs{\fg(x-\alpha)}        &=& e^{-\alpha s} \;\fG(s)                          & for & \Real(s)                    & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\ope{translation})
+  \\\opLT\brs{e^{-\alpha x} \fg(x)} &=& \fG(s+\alpha)                                   & for & \Real(s)                    & \in\intcc{A-\Real(\alpha)}{B-\Real(\alpha)} & \forall x,\alpha\in\C & (\ope{modulation})
+  \\\opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s)                                 & for & \Real(s)                    & \in\intcc{A}{B}\seti\intcc{C}{D}            & \forall x,\alpha\in\C & (\prope{additive})
+  \\\opLT\brs{\fg(\alpha x)}        &=& \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}} & for & \Real\brp{\frac{s}{\alpha}} & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\ope{dilation})  
+  \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)                                    & for & \Real(s)                    & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\prope{homogeneous})
 \end{array}}
+
 \end{theorem}
 \begin{proof}
 \begin{align*}
@@ -113,6 +125,42 @@ and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
   \\&\eqd \frac{1}{\abs{\alpha}}\brs{\opLT \fg(x)}\brp{\frac{s}{\alpha}}             && A \leq\Real\brp{\frac{s}{\alpha}}\leq B && \text{by definition of $\opLT$ \xref{def:opLT}}
   \\&\eqd \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}}                            && A \leq\Real\brp{\frac{s}{\alpha}}\leq B && \text{by definition of $\fG(s)$}
 \end{align*}
+\end{proof}
+
+%--------------------------------------
+\begin{corollary}
+\label{cor:opLT_linear}
+%--------------------------------------
+Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
+%Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
+%and $\fF(s)\eqd \brs{\opLT\ff(x)}$. 
+%Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
+%and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
+%Let $\opL$ be an operator from a linear space $\spX$ to a linear space $\spY$, both over a field $\F$.
+\corbox{\begin{array}{>{\ds}l                      c>{\ds}l                                               D     r@{\hspace{2pt}}l@{\hspace{2pt}}l                      C                      D}
+    \mc{3}{N}{Transform}                                                                                & \mc{4}{|N}{Radius of Convergence}                          & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
+  \\\hline
+    \opLT\brs{ 0                               }  &=&  0                                                & for & A              &\leq\Real(s)  & \leq B               & \forall x,\alpha\in\C & 
+  \\\opLT\brs{ -\fg(x)                         }  &=& -\opLT\brs{\fg(x)}                                & for & A-\Real(\alpha)&\leq\Real(s)  & \leq B-\Real(\alpha) & \forall x,\alpha\in\C & 
+  \\\opLT\brs{ \ff(x)-\fg(x)                   }  &=&  \opLT\brs{\fg(x)-\ff(x)}                         & for & \max(A,C)      &\leq\Real(s)  & \leq \min(B,D)       & \forall x,\alpha\in\C & 
+  \\\opLT\brs{ \sum_{n=1}^\xN \alpha_n\fg_n(x) }  &=&  \sum_{n=1}^\xN \alpha_n\brs{\opLT\brs{\fg_n(x)}} & for &                &              &                      & \forall x,\alpha\in\C & 
+\end{array}}
+
+\corbox{\begin{array}{>{\ds}l                      c  >{\ds}l                                             D     l                                                     C}
+    \mc{3}{N}{Transform}                                                                                & \mc{2}{|N}{Radius of Convergence}                         & \mc{1}{|N}{Domain}
+  \\\hline
+    \opLT\brs{ 0                               }  &=&  0                                                & for & \Real(s)\in\intcc{A              }{B              } & \forall x,\alpha\in\C 
+  \\\opLT\brs{ -\fg(x)                         }  &=& -\opLT\brs{\fg(x)}                                & for & \Real(s)\in\intcc{A-\Real(\alpha)}{B-\Real(\alpha)} & \forall x,\alpha\in\C 
+  \\\opLT\brs{ \ff(x)-\fg(x)                   }  &=&  \opLT\brs{\fg(x)-\ff(x)}                         & for & \Real(s)\in\intcc{\max(A,C)      }{\min(B,D)      } & \forall x,\alpha\in\C 
+  \\\opLT\brs{ \sum_{n=1}^\xN \alpha_n\fg_n(x) }  &=&  \sum_{n=1}^\xN \alpha_n\brs{\opLT\brs{\fg_n(x)}} & for & \Real(s)\in\intcc{               }{               } & \forall x,\alpha\in\C 
+\end{array}}
+\end{corollary}
+\begin{proof}
+\begin{enumerate}
+  \item By \prefpp{thm:opLT}, the operator $\opLT$ is \prope{additive} and \prope{homogeneous}. \label{item:opLT_linear}
+  \item By \pref{item:opLT_linear} and \prefpp{def:linop}, $\opLT$ is \prope{linear}. \label{item:opLT_linear_linear}
+  \item By \pref{item:opLT_linear_linear} and \prefpp{thm:L_prop}, the four properties listed follow.
+\end{enumerate}
 \end{proof}
 
 %======================================
