opLT linear property corallaries

--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -6,11 +6,11 @@
 \chapter{Laplace Transform}
 %=======================================
 \qboxnqt{Pierre-Simon Laplace\footnotemark}
-{La langue de l’analyse, la plus parfaite de toutes les langues, 
+{La langue de l’analyse, la plus parfaite de toutes les langues,
 étant par elle-m/<eme un puissant instrument de d/'ecouvertes;
-ses notations, lorsqu'elles sont n/'ecessaires et heureusement imagin/'ees, 
+ses notations, lorsqu'elles sont n/'ecessaires et heureusement imagin/'ees,
 sont des germes de nouveaux calculs.}
-{The language of analysis, most perfect of all, being in itself a powerful instrument of discoveries, 
+{The language of analysis, most perfect of all, being in itself a powerful instrument of discoveries,
 its notations, especially when they are necessary and happily imagined, are the seeds of new calculi.}
 \footnotetext{
   \citerpuc{laplace1814}{xxxi}{https://archive.org/details/bub_gb_6MRLAAAAMAAJ/page/n35/}{Introduction},
@@ -65,26 +65,16 @@ Let $\spLLRBu$ be the space of all
 %--------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
-and $\fF(s)\eqd \brs{\opLT\ff(x)}$. 
+and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
 Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
 and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
-%\thmbox{\begin{array}{>{\ds}lc>{\ds}lDr@{\hspace{2pt}}l@{\hspace{2pt}}lCD}
-%    \mc{3}{N}{Transform}                                                                & \mc{4}{|N}{Radius of Convergence}                                     & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
-%  \\\hline
-%    \opLT\brs{\fg(x-\alpha)}        &=& e^{-\alpha s} \;\fG(s)                          & for & A              &\leq\Real(s)                    & \leq B               & \forall x,\alpha\in\C & (translation)
-%  \\\opLT\brs{e^{-\alpha x} \fg(x)} &=& \fG(s+\alpha)                                   & for & A-\Real(\alpha)&\leq\Real(s)                    & \leq B-\Real(\alpha) & \forall x,\alpha\in\C & (modulation)
-%  \\\opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s)                                 & for & \max(A,C)      &\leq\Real(s)                    & \leq \min(B,D)       & \forall x,\alpha\in\C & (\prope{additive})
-%  \\\opLT\brs{\fg(\alpha x)}        &=& \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}} & for & A              &\leq\Real\brp{\frac{s}{\alpha}} & \leq B               & \forall x,\alpha\in\C & (dilation)  
-%  \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)                                    & for & A              &\leq\Real(s)                    & \leq B               & \forall x,\alpha\in\C & (\prope{homogeneous})
-%\end{array}}
-%
 \thmbox{\begin{array}{>{\ds}l        c>{\ds}l                                             D     l              @{\hspace{2pt}}l                                             C                       D}
     \mc{3}{N}{Transform}                                                                & \mc{3}{|N}{Radius of Convergence}                                               & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
   \\\hline
     \opLT\brs{\fg(x-\alpha)}        &=& e^{-\alpha s} \;\fG(s)                          & for & \Real(s)                    & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\ope{translation})
   \\\opLT\brs{e^{-\alpha x} \fg(x)} &=& \fG(s+\alpha)                                   & for & \Real(s)                    & \in\intcc{A-\Real(\alpha)}{B-\Real(\alpha)} & \forall x,\alpha\in\C & (\ope{modulation})
   \\\opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s)                                 & for & \Real(s)                    & \in\intcc{A}{B}\seti\intcc{C}{D}            & \forall x,\alpha\in\C & (\prope{additive})
-  \\\opLT\brs{\fg(\alpha x)}        &=& \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}} & for & \Real\brp{\frac{s}{\alpha}} & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\ope{dilation})  
+  \\\opLT\brs{\fg(\alpha x)}        &=& \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}} & for & \Real\brp{\frac{s}{\alpha}} & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\ope{dilation})
   \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)                                    & for & \Real(s)                    & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\prope{homogeneous})
 \end{array}}
 
@@ -106,11 +96,11 @@ and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
   \\&\eqd \fG(s+\alpha)                                            && A-\Real(\alpha)\leq\Real(s)\leq B-\Real(\alpha) && \text{by definition of $\fG(s)$}
   \\
   \opLT\brs{\fg(\alpha x)}
-    &\eqd \Lscale \int_{x=-\infty}^{x=\infty} \fg(\alpha x) e^{-sx} \dx             
-    && \text{by definition of $\opLT$} 
+    &\eqd \Lscale \int_{x=-\infty}^{x=\infty} \fg(\alpha x) e^{-sx} \dx
+    && \text{by definition of $\opLT$}
     && \text{\xref{def:opLT}}
   \\&=    \Lscale \int_{u/\alpha=-\infty}^{u/\alpha=\infty} \fg(u) e^{-s(u/\alpha)} \frac{1}{\alpha}\du && \text{where $u\eqd \alpha x$}   && \text{$\implies$ $x=\frac{u}{\alpha}$}
-  \\&=    \Lscale \frac{1}{\alpha}\int_{u/\alpha=-\infty}^{u/\alpha=\infty} \fg(u) e^{-(s/\alpha)u} \du 
+  \\&=    \Lscale \frac{1}{\alpha}\int_{u/\alpha=-\infty}^{u/\alpha=\infty} \fg(u) e^{-(s/\alpha)u} \du
   \\&=    \brbl{\begin{array}{>{\ds}rM}
             \Lscale \frac{1}{\alpha}\int_{u=-\infty}^{u=\infty} \fg(u) e^{-(s/\alpha)u} \du & if $\alpha\ge0$
           \\[2ex]
@@ -128,36 +118,29 @@ and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \end{proof}
 
 %--------------------------------------
-\begin{corollary}
+\begin{corollary}[Linear Properties]
 \label{cor:opLT_linear}
 %--------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
-%Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
-%and $\fF(s)\eqd \brs{\opLT\ff(x)}$. 
-%Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
-%and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
-%Let $\opL$ be an operator from a linear space $\spX$ to a linear space $\spY$, both over a field $\F$.
-\corbox{\begin{array}{>{\ds}l                      c>{\ds}l                                               D     r@{\hspace{2pt}}l@{\hspace{2pt}}l                      C                      D}
-    \mc{3}{N}{Transform}                                                                                & \mc{4}{|N}{Radius of Convergence}                          & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
+Let $A$ and $B$ be real numbers such that $\intcc{A}{B}$
+is the \structe{radius of convergence} of $\opLT\brs{\fg(x)}$.
+Let $C$ and $D$ be real numbers such that $\intcc{C}{D}$
+is the \structe{radius of convergence} of $\opLT\brs{\ff(x)}$.
+Let $A_n$ and $B_n$ be real numbers such that $\intcc{A_n}{B_n}$
+is the \structe{radius of convergence} of $\opLT\brs{\fg_n(x)}$.
+\corbox{\begin{array}{>{\ds}l                      c  >{\ds}l                                       D     >{\ds}l                                               C}
+    \mc{3}{N}{Transform}                                                                          & \mc{2}{|N}{Radius of Convergence}                         & \mc{1}{|N}{Domain}
   \\\hline
-    \opLT\brs{ 0                               }  &=&  0                                                & for & A              &\leq\Real(s)  & \leq B               & \forall x,\alpha\in\C & 
-  \\\opLT\brs{ -\fg(x)                         }  &=& -\opLT\brs{\fg(x)}                                & for & A-\Real(\alpha)&\leq\Real(s)  & \leq B-\Real(\alpha) & \forall x,\alpha\in\C & 
-  \\\opLT\brs{ \ff(x)-\fg(x)                   }  &=&  \opLT\brs{\fg(x)-\ff(x)}                         & for & \max(A,C)      &\leq\Real(s)  & \leq \min(B,D)       & \forall x,\alpha\in\C & 
-  \\\opLT\brs{ \sum_{n=1}^\xN \alpha_n\fg_n(x) }  &=&  \sum_{n=1}^\xN \alpha_n\brs{\opLT\brs{\fg_n(x)}} & for &                &              &                      & \forall x,\alpha\in\C & 
-\end{array}}
-
-\corbox{\begin{array}{>{\ds}l                      c  >{\ds}l                                             D     l                                                     C}
-    \mc{3}{N}{Transform}                                                                                & \mc{2}{|N}{Radius of Convergence}                         & \mc{1}{|N}{Domain}
-  \\\hline
-    \opLT\brs{ 0                               }  &=&  0                                                & for & \Real(s)\in\intcc{A              }{B              } & \forall x,\alpha\in\C 
-  \\\opLT\brs{ -\fg(x)                         }  &=& -\opLT\brs{\fg(x)}                                & for & \Real(s)\in\intcc{A-\Real(\alpha)}{B-\Real(\alpha)} & \forall x,\alpha\in\C 
-  \\\opLT\brs{ \ff(x)-\fg(x)                   }  &=&  \opLT\brs{\fg(x)-\ff(x)}                         & for & \Real(s)\in\intcc{\max(A,C)      }{\min(B,D)      } & \forall x,\alpha\in\C 
-  \\\opLT\brs{ \sum_{n=1}^\xN \alpha_n\fg_n(x) }  &=&  \sum_{n=1}^\xN \alpha_n\brs{\opLT\brs{\fg_n(x)}} & for & \Real(s)\in\intcc{               }{               } & \forall x,\alpha\in\C 
+    \opLT\brs{ 0                               }  &=&  0                                          & for & \Real(s)\in\intcc{A}{B}                             & \forall x\in\C
+  \\\opLT\brs{ -\fg(x)                         }  &=& -\opLT\brs{\fg(x)}                          & for & \Real(s)\in\intcc{A}{B}                             & \forall x\in\C
+  \\\opLT\brs{ \ff(x)-\fg(x)                   }  &=&  \opLT\brs{\fg(x)} - \opLT{\ff(x)}          & for & \Real(s)\in\intcc{A}{B}\seti\intcc{C}{D}            & \forall x\in\C
+  \\\opLT\brs{ \sum_{n=1}^\xN \alpha_n\fg_n(x) }  &=&  \sum_{n=1}^\xN \alpha_n\opLT\brs{\fg_n(x)} & for & \Real(s)\in\setopi_{n=1}^\xN\intcc{A_n}{B_n}        & \forall x,\alpha_n\in\C
 \end{array}}
 \end{corollary}
 \begin{proof}
 \begin{enumerate}
-  \item By \prefpp{thm:opLT}, the operator $\opLT$ is \prope{additive} and \prope{homogeneous}. \label{item:opLT_linear}
+  \item By \prefpp{thm:opLT}, the operator \ope{Laplace Transform} operator $\opLT$
+        is \prope{additive} and \prope{homogeneous}. \label{item:opLT_linear}
   \item By \pref{item:opLT_linear} and \prefpp{def:linop}, $\opLT$ is \prope{linear}. \label{item:opLT_linear_linear}
   \item By \pref{item:opLT_linear_linear} and \prefpp{thm:L_prop}, the four properties listed follow.
 \end{enumerate}
@@ -352,7 +335,7 @@ Let $\omega\eqd\Imag(s)$
                \end{array}}
        \end{array}$
 
-  \item 
+  \item
     \begin{align*}
       &\boxed{\opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}\step(x)}}
       \\&\eqd \int_{\R} \cos(\beta x)e^{-\alpha\abs{x}} e^{-s x} \step(x)\dx
@@ -368,8 +351,8 @@ Let $\omega\eqd\Imag(s)$
         && \Real(s)>-\alpha
         && \text{by \pref{ilem:opLT_cosexpstep}}
       \\&= \mathrlap{
-           \frac{1}{2}\brs{\frac{1}{s +\alpha -i\beta}} \brs{\frac{s +\alpha +i\beta}{s +\alpha +i\beta}} + 
-           \frac{1}{2}\brs{\frac{1}{s +\alpha +i\beta}} \brs{\frac{s +\alpha -i\beta}{s +\alpha -i\beta}} 
+           \frac{1}{2}\brs{\frac{1}{s +\alpha -i\beta}} \brs{\frac{s +\alpha +i\beta}{s +\alpha +i\beta}} +
+           \frac{1}{2}\brs{\frac{1}{s +\alpha +i\beta}} \brs{\frac{s +\alpha -i\beta}{s +\alpha -i\beta}}
            \qquad\Real(s)>-\alpha
            }
       \\&= \frac{1}{2}\brs{\frac{(s +\alpha +i\beta) + (s +\alpha -i\beta)}{(s +\alpha +i\beta)(s +\alpha -i\beta)}}
@@ -380,7 +363,7 @@ Let $\omega\eqd\Imag(s)$
         && \Real(s)>-\alpha
     \end{align*}
 
-  \item 
+  \item
     \begin{align*}
       \boxed{\opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}\step(-x)}}
         &= \opLT\brs{\cos(-\beta x)e^{-\alpha\abs{-x}}\step(-x)}
@@ -390,7 +373,7 @@ Let $\omega\eqd\Imag(s)$
         && \Real(s)<\alpha
     \end{align*}
 
-  %see previous item\item 
+  %see previous item\item
   %see previous item  \begin{align*}
   %see previous item    &\boxed{\opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}\step(-x)}}
   %see previous item    \\&\eqd \int_{\R} \cos(\beta x)e^{-\alpha\abs{x}} e^{-s x} \step(-x)\dx
@@ -406,8 +389,8 @@ Let $\omega\eqd\Imag(s)$
   %see previous item      && \Real(s)<\alpha
   %see previous item      && \text{by \pref{ilem:opLT_cosexpstep}}
   %see previous item    \\&= \mathrlap{
-  %see previous item         \frac{1}{2}\brs{\frac{-1}{s -\alpha -i\beta}} \brs{\frac{s -\alpha +i\beta}{s -\alpha +i\beta}} + 
-  %see previous item         \frac{1}{2}\brs{\frac{-1}{s -\alpha +i\beta}} \brs{\frac{s -\alpha -i\beta}{s -\alpha -i\beta}} 
+  %see previous item         \frac{1}{2}\brs{\frac{-1}{s -\alpha -i\beta}} \brs{\frac{s -\alpha +i\beta}{s -\alpha +i\beta}} +
+  %see previous item         \frac{1}{2}\brs{\frac{-1}{s -\alpha +i\beta}} \brs{\frac{s -\alpha -i\beta}{s -\alpha -i\beta}}
   %see previous item         \qquad\Real(s)<\alpha
   %see previous item         }
   %see previous item    \\&= \frac{1}{2}\brs{\frac{-(s -\alpha +i\beta) -(s -\alpha -i\beta)}{(s -\alpha +i\beta)(s -\alpha -i\beta)}}
