--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -106,6 +106,37 @@ and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \end{align*}
 \end{proof}
 
+%--------------------------------------
+\begin{corollary}
+\footnote{
+  \citerpgc{bracewell1978}{234}{007007013X}{Table 11.1 Theorems for the Laplace Transform}
+  }
+\label{cor:opLT_transversal}
+%--------------------------------------
+Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
+Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
+and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
+Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
+and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
+\corbox{\begin{array}{>{\ds}l        c>{\ds}l                   D     l              @{\hspace{2pt}}l    C                        D}
+    \mc{3}{N}{Transform}                                      & \mc{3}{|N}{Radius of Convergence}       & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
+  \\\hline
+    \opLT\brs{\fg(-x)}  &=& \frac{1}{\abs{\alpha}}\fG\brp{-s} & for & \Real\brp{s} & \in\intcc{-B}{-A}  & \forall x,\alpha\in\C & (\ope{reversal})
+\end{array}}
+\end{corollary}
+\begin{proof}
+\begin{align*}
+  \opLT\brs{\fg(-x)}  
+    &= \opLT\brs{\fg([-1]x)}  
+  \\&= \opLT\brs{\frac{1}{\abs{-1}}\fg\brp{\frac{x}{-1}}}
+    && \text{by \prefp{thm:opLT_dilation}}
+    && \Real\brp{\frac{s}{-1}} \in\intcc{A}{B} 
+  \\&= \opLT\brs{\fG\brp{-s}}
+    &&
+    && \Real\brp{s} \in\intcc{-B}{-A} 
+\end{align*}
+\end{proof}
+
 %=======================================
 \section{Linear properties}
 %=======================================
